--- a/src/views/Board.scss
+++ b/src/views/Board.scss
@@ -14,8 +14,10 @@
     &__Lists {
         display: flex;
         flex-direction: row;
+        align-items: flex-start;
         list-style: none;
         padding: 0;
+
         > * + * {
             margin-left: 8px;
         }
@@ -25,10 +27,25 @@
     display: flex;
     flex-direction: column;
     width: 272px;
-    padding: 16px;
+    padding: 16px 8px 0 8px;
     background: rgb(223, 225, 230);
     border-radius: 4px;
     max-height: 100%;
+    justify-content: space-between;
+    &__AddList {
+        border: none;
+        width: 272px;
+        background-color: rgba(0,0,0,.12);
+        cursor: pointer;
+        color: #fff;
+        border-radius: 3px;
+        height: auto;
+        min-height: 32px;
+        padding: 4px;
+        &:hover {
+            background: rgba(0,0,0,.24);
+        }
+        }
     &__Title {
         padding: 0;
         margin: 0;
@@ -40,6 +57,21 @@
             margin-top: 4px;
         }
     }
+    &__AddButton {
+        padding: 8px 8px;
+        margin: 0 -8px;
+        border: none;
+        background: inherit;
+        display: flex;
+        color: rgb(107, 119, 140);
+        border-radius: 0 0 3px 3px;
+
+        &:hover {
+            background-color: rgba(9,30,66,.13);
+            color: rgb(23, 43, 77);
+            text-decoration: underline;
+        }
+    }
 }
 
 .Card {
@@ -49,11 +81,9 @@
         border-radius: 3px;
         box-shadow: 0 1px 0 rgba(9,30,66,.25);
         cursor: pointer;
-        display: block;
         max-width: 300px;
         min-height: 20px;
         position: relative;
-        padding: 6px 8px 2px;
-
+        padding: 6px 8px;
     }
 }
