--- a/src/views/index.scss
+++ b/src/views/index.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,700&display=swap');
-@import url('./normalize.scss');
+@import url('../styles/normalize.scss');
 
 
 html,body {
