--- a/src/views/index.scss
+++ b/src/views/index.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,700&display=swap');
 @import url('../styles/normalize.scss');
 
+$c-primary:rgb(0, 121, 191);
 
 html,body {
     margin: 0;
