--- a/src/views/BoardView.scss
+++ b/src/views/BoardView.scss
@@ -5,11 +5,11 @@
     flex-direction: column;
     background: rgb(0, 121, 191);
     padding: 16px;
-    &__Title {
-        width: 100%;
-        color: white;
-        padding: 0 8px;
-        margin: 0
+    &__Header {
+        display: flex;
+        & > * + * {
+            margin-left: 16px;
+        }
     }
     &__Lists {
         display: flex;
@@ -21,5 +21,26 @@
         > * + * {
             margin-left: 8px;
         }
+    }
+}
+
+.Header {
+    & > * + * {
+        margin-left: 8px;
+    }
+    &__Title {
+        width: 100%;
+        color: white;
+        padding: 0 8px;
+        margin: 0
+    }
+
+    &__HomeBtn {
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        border-radius: 3px;
+        background-color: hsla(0,0%,100%,.3);
+        padding: 4px;
     }
 }
