--- a/src/views/MainView.scss
+++ b/src/views/MainView.scss
@@ -9,8 +9,9 @@
     &__Boards {
         display: flex;
         flex-wrap: wrap;
-        & > * + * {
-            margin-left: 24px;
+        padding: 8px 16px;
+        & * {
+            margin: 8px;
         }
     }
 }
