--- a/src/components/List.scss
+++ b/src/components/List.scss
@@ -2,7 +2,7 @@
 .List {
     display: flex;
     flex-direction: column;
-    width: 272px;
+    min-width: 272px;
     padding: 8px 8px 0 8px;
     background: rgb(223, 225, 230);
     border-radius: 4px;
@@ -10,7 +10,7 @@
     justify-content: space-between;
     &__AddList {
         border: none;
-        width: 272px;
+        min-width: 272px;
         background-color: rgba(0,0,0,.12);
         cursor: pointer;
         color: rgba(255, 255, 255, 0.8);;
